--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -13,8 +13,17 @@
     <engineHomeDirectory>${basedir}/../maven/config/target/ivyEngine/</engineHomeDirectory>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>ch.ivyteam.ivy.public-api</groupId>
+      <artifactId>public-api</artifactId>
+      <version>11.3.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+
   <build>
-    <plugins>     
+    <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
@@ -96,6 +105,14 @@
   </distributionManagement>
 
   <repositories>
+    <repository>
+      <id>nexus.axonivy.com</id>
+      <url>https://nexus.axonivy.com/repository/maven/</url>
+      <snapshots>
+        <updatePolicy>always</updatePolicy>
+      </snapshots>
+    </repository>
+
     <repository>
       <id>nexus.ivyteam.io</id>
       <url>https://nexus.ivyteam.io/repository/maven/</url>
