--- a/dev-workflow-ui-test/pom.xml
+++ b/dev-workflow-ui-test/pom.xml
@@ -19,6 +19,7 @@
       <groupId>ch.ivyteam.workflow</groupId>
       <artifactId>dev-workflow-ui</artifactId>
       <version>11.3.0-SNAPSHOT</version>
+      <type>iar</type>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
