--- a/dev-workflow-ui-web-test/pom.xml
+++ b/dev-workflow-ui-web-test/pom.xml
@@ -23,11 +23,13 @@
       <groupId>ch.ivyteam.workflow</groupId>
       <artifactId>dev-workflow-ui</artifactId>
       <version>11.3.0-SNAPSHOT</version>
+      <type>iar</type>
     </dependency>
     <dependency>
       <groupId>ch.ivyteam.workflow</groupId>
       <artifactId>dev-workflow-ui-test-data</artifactId>
       <version>11.3.0-SNAPSHOT</version>
+      <type>iar</type>
     </dependency>
     <dependency>
       <groupId>com.axonivy.ivy.webtest</groupId>
