--- a/dev-workflow-ui-web-test/pom.xml
+++ b/dev-workflow-ui-web-test/pom.xml
@@ -16,6 +16,8 @@
   <properties>
     <test.application>devworkflowuiwebtest</test.application>
     <workflow.jar.dir>${basedir}/../maven/config/target/ivyEngine/webapps/dev-workflow-ui/</workflow.jar.dir>
+    <skip.integration.test>true</skip.integration.test>
+    <skip.engine>true</skip.engine>
   </properties>
 
   <dependencies>
@@ -66,57 +68,30 @@
         <groupId>com.axonivy.ivy.ci</groupId>
         <artifactId>project-build-plugin</artifactId>
         <extensions>true</extensions>
-      </plugin>
-
-      <plugin>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>3.4.0</version>
         <executions>
           <execution>
-            <id>clean-wf-ui-from-engine</id>
-            <phase>package</phase>
+            <id>default-start-test-engine</id>
+            <phase>pre-integration-test</phase>
             <goals>
-              <goal>clean</goal>
+              <goal>start-test-engine</goal>
             </goals>
             <configuration>
-             <excludeDefaultDirectories>true</excludeDefaultDirectories>
-             <filesets>
-                <fileset>
-                  <directory>${workflow.jar.dir}</directory>
-                  <includes>
-                    <include>dev-workflow-ui-*.jar</include>
-                  </includes>
-                </fileset>
-              </filesets>
+              <skipTest>${skip.engine}</skipTest>
+            </configuration>
+          </execution>
+          <execution>
+            <id>default-deploy-to-test-engine</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>deploy-to-test-engine</goal>
+            </goals>
+            <configuration>
+              <skipDeploy>${skip.engine}</skipDeploy>
             </configuration>
           </execution>
         </executions>
       </plugin>
 
-      <plugin>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>3.3.1</version>
-        <executions>
-          <execution>
-            <id>copy-resource-one</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${workflow.jar.dir}</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>${basedir}/../dev-workflow-ui/target/</directory>
-                  <includes>
-                    <include>*.jar</include>
-                  </includes>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -132,72 +107,179 @@
               <skip>true</skip>
             </configuration>
           </execution>
-          <execution>
-            <id>homepage-redirect-test</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <includes>
-                <include>**/WebTestHomeRedirect.java</include>
-              </includes>
-              <argLine>
-                -Dtest.engine.url=${test.engine.url}
-                -Dtest.engine.app=${test.application}
-                -Dtest.integrated.workflow=dev-workflow-ui</argLine>
-            </configuration>
-          </execution>
-          <execution>
-            <id>selenium.web.docu</id>
-            <phase>pre-integration-test</phase>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <includes>
-                <include>**/WebDocu*.java</include>
-              </includes>
-              <argLine>
-                -Dtest.engine.url=${test.engine.url}
-                -Dtest.engine.app=${test.application}</argLine>
-            </configuration>
-          </execution>
-          <execution>
-            <id>test-integrated-artifact</id>
-            <phase>integration-test</phase>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <includes>
-                <include>**/WebTest*IT.java</include>
-              </includes>
-              <reportNameSuffix>Integrated</reportNameSuffix>
-              <argLine>
-                -Dtest.engine.url=${test.engine.url}
-                -Dtest.engine.app=${test.application}
-                -Dtest.integrated.workflow=dev-workflow-ui</argLine>
-            </configuration>
-          </execution>
-          <execution>
-            <id>cleanup-test</id>
-            <phase>integration-test</phase>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <includes>
-                <include>**/WebTestCleanup.java</include>
-              </includes>
-              <argLine>
-                -Dtest.engine.url=${test.engine.url}
-                -Dtest.engine.app=${test.application}
-                -Dtest.integrated.workflow=dev-workflow-ui</argLine>
-            </configuration>
-          </execution>
         </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${maven.surefire.version}</version>
+        <configuration>
+          <skip>${skip.integration.test}</skip>
+        </configuration>
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>integration</id>
+      <properties>
+        <skip.integration.test>false</skip.integration.test>
+        <skip.engine>false</skip.engine>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>3.4.0</version>
+            <executions>
+              <execution>
+                <id>clean-wf-ui-from-engine</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>clean</goal>
+                </goals>
+                <configuration>
+                  <excludeDefaultDirectories>true</excludeDefaultDirectories>
+                  <filesets>
+                    <fileset>
+                      <directory>${workflow.jar.dir}</directory>
+                      <includes>
+                        <include>dev-workflow-ui-*.jar</include>
+                      </includes>
+                    </fileset>
+                  </filesets>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+    
+          <plugin>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>3.3.1</version>
+            <executions>
+              <execution>
+                <id>copy-resource-one</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>copy-resources</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>${workflow.jar.dir}</outputDirectory>
+                  <resources>
+                    <resource>
+                      <directory>${basedir}/../dev-workflow-ui/target/</directory>
+                      <includes>
+                        <include>*.jar</include>
+                      </includes>
+                    </resource>
+                  </resources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven.surefire.version}</version>
+            <configuration>
+              <testFailureIgnore>true</testFailureIgnore>
+              <trimStackTrace>false</trimStackTrace>
+            </configuration>
+            <executions>
+              <execution>
+                <id>homepage-redirect-test</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                  <includes>
+                    <include>**/WebTestHomeRedirect.java</include>
+                  </includes>
+                  <argLine>
+                    -Dtest.engine.url=${test.engine.url}
+                    -Dtest.engine.app=${test.application}
+                    -Dtest.integrated.workflow=dev-workflow-ui</argLine>
+                </configuration>
+              </execution>
+              <execution>
+                <id>test-integrated-artifact</id>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                  <includes>
+                    <include>**/WebTest*IT.java</include>
+                  </includes>
+                  <reportNameSuffix>Integrated</reportNameSuffix>
+                  <argLine>
+                    -Dtest.engine.url=${test.engine.url}
+                    -Dtest.engine.app=${test.application}
+                    -Dtest.integrated.workflow=dev-workflow-ui</argLine>
+                </configuration>
+              </execution>
+              <execution>
+                <id>cleanup-test</id>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                  <includes>
+                    <include>**/WebTestCleanup.java</include>
+                  </includes>
+                  <argLine>
+                    -Dtest.engine.url=${test.engine.url}
+                    -Dtest.engine.app=${test.application}
+                    -Dtest.integrated.workflow=dev-workflow-ui</argLine>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+
+      </build>
+    </profile>
+
+    <profile>
+      <id>screenshots</id>
+      <properties>
+        <skip.engine>false</skip.engine>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven.surefire.version}</version>
+            <configuration>
+              <testFailureIgnore>true</testFailureIgnore>
+              <trimStackTrace>false</trimStackTrace>
+            </configuration>
+            <executions>
+              <execution>
+                <id>selenium.web.docu</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                  <includes>
+                    <include>**/WebDocu*.java</include>
+                  </includes>
+                  <argLine>
+                    -Dtest.engine.url=${test.engine.url}
+                    -Dtest.engine.app=${test.application}</argLine>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
