Enable renovate on release branches

--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,7 @@
   "extends": [
     "config:recommended"
   ],
-  "assignees": ["alexsuter"]
+  "assignees": ["alexsuter"],
+  "baseBranches": ["master", "/^release\\/.*/"]
 }
+
