XIVY-15825 Use new API for translated custom field values
- Use the new API for translated custom field values
- Add tooltip to custom field value that shows label and value
- Add new test process that has configured multi language values for
custom fields
- Add tests for CustomFieldModel

--- a/dev-workflow-ui-test-data/cms/cms_en.yaml
+++ b/dev-workflow-ui-test-data/cms/cms_en.yaml
@@ -7,3 +7,16 @@ Categories:
     cssIcon: si si-copy-paste
     name: 2. Example dialogs
     tooltip: Example dialogs
+CustomFields:
+  Cases:
+    ProductKind:
+      Description: The kind of product
+      Label: Product Kind
+      Values:
+        Food: Food
+  Tasks:
+    CustomerKind:
+      Description: The kind of customer
+      Label: Customer Kind
+      Values:
+        '10': Silver
