--- a/dev-workflow-ui-web-test/pom.xml
+++ b/dev-workflow-ui-web-test/pom.xml
@@ -171,7 +171,7 @@
                     <resource>
                       <directory>${basedir}/../dev-workflow-ui/target/</directory>
                       <includes>
-                        <include>*.jar</include>
+                        <include>dev-workflow-ui-*.jar</include>
                       </includes>
                     </resource>
                   </resources>
