--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -5,21 +5,30 @@
   <version>13.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
+  <parent>
+    <groupId>com.axonivy.ivy.api</groupId>
+    <artifactId>ivy-project-parent</artifactId>
+    <version>13.1.0-SNAPSHOT</version>
+    <relativePath></relativePath>
+  </parent>
+
   <properties>
     <engine.page.url>https://product.ivyteam.io</engine.page.url>
-    <flatten.plugin.version>1.7.0</flatten.plugin.version>
-    <project.build.plugin.version>13.1.0-SNAPSHOT</project.build.plugin.version>
-    <web.tester.version>12.0.2-SNAPSHOT</web.tester.version>
     <engineHomeDirectory>${basedir}/../maven/config/target/ivyEngine/</engineHomeDirectory>
-    <maven.surefire.version>3.5.3</maven.surefire.version>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.axonivy.ivy.api</groupId>
+      <artifactId>ivy-api</artifactId>
+    </dependency>
+  </dependencies>
 
   <build>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
-        <version>${flatten.plugin.version}</version>
         <configuration>
           <updatePomFile>true</updatePomFile>
         </configuration>
@@ -47,7 +56,6 @@
         <plugin>
           <groupId>com.axonivy.ivy.ci</groupId>
           <artifactId>project-build-plugin</artifactId>
-          <version>${project.build.plugin.version}</version>
           <configuration>
             <engineDirectory>${engineHomeDirectory}</engineDirectory>
             <testEngine>COPY_FROM_TEMPLATE</testEngine>
@@ -80,7 +88,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.1.4</version>
           <configuration>
             <skip>true</skip>
           </configuration>
@@ -88,12 +95,10 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
-          <version>3.1.4</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.3.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -108,33 +113,18 @@
 
   <repositories>
     <repository>
-      <id>nexus.ivyteam.io</id>
-      <url>https://nexus.ivyteam.io/repository/maven/</url>
+      <id>central</id>
+      <url>https://repo.maven.apache.org/maven2</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>maven.axonivy.com</id>
+      <url>https://maven.axonivy.com</url>
       <snapshots>
         <updatePolicy>always</updatePolicy>
       </snapshots>
     </repository>
   </repositories>
-
-  <pluginRepositories>
-    <!-- Used to install ivy maven plugins -->
-    <pluginRepository>
-      <id>nexus.ivyteam.io</id>
-      <url>https://nexus.ivyteam.io/repository/maven/</url>
-      <snapshots>
-        <updatePolicy>always</updatePolicy>
-      </snapshots>
-    </pluginRepository>
-    <!-- Used to install project-build-plugin -->
-    <pluginRepository>
-      <id>central.snapshots</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <updatePolicy>always</updatePolicy>
-      </snapshots>
-    </pluginRepository>
-  </pluginRepositories>
 </project>
