--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -127,7 +127,7 @@
     </pluginRepository>
     <!-- Used to install project-build-plugin -->
     <pluginRepository>
-      <id>central.snapshots</id>
+      <id>central.sonatype.snapshots</id>
       <url>https://central.sonatype.com/repository/maven-snapshots</url>
       <releases>
         <enabled>false</enabled>
