--- a/dev-workflow-ui-web-test/pom.xml
+++ b/dev-workflow-ui-web-test/pom.xml
@@ -49,7 +49,7 @@
 
   <repositories>
     <repository>
-      <id>central.snapshots</id>
+      <id>central.sonatype.snapshots</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
       <releases>
         <enabled>false</enabled>
