--- a/dev-workflow-ui-test-data/pom.xml
+++ b/dev-workflow-ui-test-data/pom.xml
@@ -15,6 +15,13 @@
   <version>13.2.0-SNAPSHOT</version>
   <packaging>iar</packaging>
 
+  <dependencies>
+    <dependency>
+      <groupId>com.axonivy.ivy.api</groupId>
+      <artifactId>ivy-api</artifactId>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
