--- a/dev-workflow-ui-test/pom.xml
+++ b/dev-workflow-ui-test/pom.xml
@@ -37,6 +37,10 @@
       <version>3.27.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.axonivy.ivy.api</groupId>
+      <artifactId>ivy-api</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <testSourceDirectory>src_test</testSourceDirectory>
