--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -5,13 +5,16 @@
   <version>13.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
+  <parent>
+    <groupId>com.axonivy.ivy.api</groupId>
+    <artifactId>ivy-project-parent</artifactId>
+    <version>13.2.0-SNAPSHOT</version>
+    <relativePath></relativePath>
+  </parent>
+
   <properties>
     <engine.page.url>https://product.ivyteam.io</engine.page.url>
-    <flatten.plugin.version>1.7.0</flatten.plugin.version>
-    <project.build.plugin.version>13.2.0-SNAPSHOT</project.build.plugin.version>
-    <web.tester.version>13.1.1-SNAPSHOT</web.tester.version>
     <engineHomeDirectory>${basedir}/../maven/config/target/ivyEngine/</engineHomeDirectory>
-    <maven.surefire.version>3.5.3</maven.surefire.version>
   </properties>
 
   <build>
@@ -19,7 +22,6 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
-        <version>${flatten.plugin.version}</version>
         <configuration>
           <updatePomFile>true</updatePomFile>
         </configuration>
@@ -47,7 +49,6 @@
         <plugin>
           <groupId>com.axonivy.ivy.ci</groupId>
           <artifactId>project-build-plugin</artifactId>
-          <version>${project.build.plugin.version}</version>
           <configuration>
             <engineDirectory>${engineHomeDirectory}</engineDirectory>
             <testEngine>COPY_FROM_TEMPLATE</testEngine>
@@ -64,7 +65,6 @@
                   <pluginExecutionFilter>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>flatten-maven-plugin</artifactId>
-                    <versionRange>[${flatten.plugin.version},)</versionRange>
                     <goals>
                       <goal>flatten</goal>
                     </goals>
@@ -80,7 +80,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.1.4</version>
           <configuration>
             <skip>true</skip>
           </configuration>
@@ -88,12 +87,10 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
-          <version>3.1.4</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.3.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -108,11 +105,18 @@
 
   <repositories>
     <repository>
-      <id>nexus.ivyteam.io</id>
-      <url>https://nexus.ivyteam.io/repository/maven/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
+    <repository>
       <snapshots>
         <updatePolicy>always</updatePolicy>
       </snapshots>
+      <id>maven.axonivy.com</id>
+      <url>https://maven.axonivy.com</url>
     </repository>
   </repositories>
 
@@ -121,17 +125,6 @@
     <pluginRepository>
       <id>nexus.ivyteam.io</id>
       <url>https://nexus.ivyteam.io/repository/maven/</url>
-      <snapshots>
-        <updatePolicy>always</updatePolicy>
-      </snapshots>
-    </pluginRepository>
-    <!-- Used to install project-build-plugin -->
-    <pluginRepository>
-      <id>central.sonatype.snapshots</id>
-      <url>https://central.sonatype.com/repository/maven-snapshots</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
       <snapshots>
         <updatePolicy>always</updatePolicy>
       </snapshots>
